<resources>
    <string name="firstSubject">First Subject</string>
    <string name="secondSubject">Second Subject</string>
    <string name="thirdSubject">Third Subject</string>
    <string name="fourthSubject">Fourth Subject</string>
    <string name="fifthSubject">Fifth Subject</string>
    <string name="sixthSubject">Sixth Subject</string>
    <string name="app_name">GradeTracker</string>
    <string name="careerGpaTitle">Career GPA</string>
    <string name="semesterGpaTitle">Semester GPA</string>
    <string name="editSubject">Edit</string>
    <string name="GPA">GPA</string>
    <string name="recentGrades">Recent grades</string>
    <string name="targetGrades">Target Grade</string>
    <string name="targetGPATitle">Target GPA</string>
    <string name="addGradeTitle">Add Grade Title </string>
    <string name="addGradeWeight">Add Grade weight </string>
    <string name="addTargetGrade">Add Target Grade </string>
    <string name="assignment">Assignment</string>
    <string name="gradeWeight">Grade Weight</string>
    <string name="targetGrade">Target Grade</string>
    <string name="addAssignment">Add Assignment</string>
    <string name="add">Add</string>
    <string name="subject">Subject</string>
    <string name="topic">Topic</string>
    <string name="upcomingAssignments">Upcoming Assignments</string>
    <string name="addGrade">Add Grade</string>
    <string name="enterGrade">Enter Grade</string>
    <string name="gradeHeader">Grade</string>
    <string name="submit">Submit</string>
    <string name="averageGrade">Average Grade</string>
    <string name="delAssignment">Delete Assignment</string>
    <string name="visible">Subject visible</string>
    <string name="enterName">Enter Name</string>
    <string name="changeName">Change</string>
<string name="addSubject">Add Subject</string>

    <string-array name="subjectSpinnerChoices">
        <item>@string/firstSubject</item>
        <item>@string/secondSubject</item>
        <item>@string/thirdSubject</item>
        <item>@string/fourthSubject</item>
        <item>@string/fifthSubject</item>
        <item>@string/sixthSubject</item>

    </string-array>


</resources>